All page new design

--- a/brand-aquel.html
+++ b/brand-aquel.html
@@ -11,7 +11,7 @@
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <title>Бренд АКВЕЛ - основание, развитие и достижения.</title>
+    <title>Бренд АКВЕЛ - основание, развитие и достижения. AQUEL - компания с 17-летней историей.</title>
   </head>
 
   <body>
@@ -105,8 +105,7 @@
       <section class="main">
 
         <div class="introduction introduction--brand-aquel">
-          <h1 class="introduction__title animation-fadeIn">Бренд</h1>
-          <span class="introduction__aquel-title animation-fadeIn">AQUEL</span>
+          <h1 class="introduction__title animation-fadeIn">БРЕНД A<img src="img/logo-name-letter-Q.png" width="40" height="40" alt="Логотип">UEL</h1>
         </div>
 
         <div class="brand-aquel">
@@ -129,28 +128,22 @@
             <div class="brand-aquel__card brand-aquel__card--list">
               <ul class="brand-aquel__list">
                 <li class="brand-aquel__year">2000 год</li>
-                <div class="divider-main divider-main--card divider-main--about"></div>
                 <li>Основание AQUEL</li>
                 <li>Первая презентация оборудования</li>
-                <div class="divider-main divider-main--card divider-main--about"></div>
                 <li class="brand-aquel__year">2001 год</li>
                 <li>Основание AQUEL Slovakia</li>
                 <li>Спонсор фонда Дагмар и Вацлава Гавела</li>
-                <div class="divider-main divider-main--card divider-main--about"></div>
                 <li class="brand-aquel__year">2002 год</li>
                 <li>Основание AQUEL Poland</li>
                 <li>Основание AQUEL Atlas (Марокко)</li>
                 <li>Основание AQUEL Estonia</li>
                 <li>Основание AQUEL Hungary</li>
-                <div class="divider-main divider-main--card divider-main--about"></div>
                 <li class="brand-aquel__year">2003 год</li>
                 <li>Начало работы в Дубае</li>
                 <li>Главный спонсор Детского Ранчо Глучин</li>
-                <div class="divider-main divider-main--card divider-main--about"></div>
                 <li class="brand-aquel__year">2004 год</li>
                 <li>Первые служебные машины</li>
                 <li>Спонсор AUTOR Nova Cup</li>
-                <div class="divider-main divider-main--card divider-main--about"></div>
                 <li class="brand-aquel__year">2005 год</li>
                 <li>Основание AQUEL Germany</li>
                 <li>Запуск автопрограммы AQUEL</li>
@@ -161,30 +154,24 @@
             <div class="brand-aquel__card brand-aquel__card--list">
               <ul class="brand-aquel__list">
                 <li class="brand-aquel__year">2006 год</li>
-                <li>Основание <b>AQUEL Rus</b></li>
+                <li>Основание AQUEL Rus</li>
                 <li>Рождение AQUEL Лаборатории</li>
-                <div class="divider-main divider-main--card divider-main--about"></div>
                 <li class="brand-aquel__year">2007 год</li>
                 <li>Начало работы AQUEL Investment</li>
                 <li>Спонсор Лиги против рака</li>
                 <li>Основание AQUEL Bulgaria</li>
                 <li>Сертификация ISO 9001</li>
-                <div class="divider-main divider-main--card divider-main--about"></div>
                 <li class="brand-aquel__year">2008 год</li>
                 <li>Основание AQUEL Ukraine</li>
                 <li>Новая автопрограмма AQUEL - Mercedes C</li>
-                <div class="divider-main divider-main--card divider-main--about"></div>
                 <li class="brand-aquel__year">2010 год</li>
                 <li>Открытие выставки AQUEL</li>
-                <div class="divider-main divider-main--card divider-main--about"></div>
                 <li class="brand-aquel__year">2011 год</li>
                 <li>Основание AQUEL Казахстан</li>
                 <li>Новый офис AQUEL Poland</li>
                 <li>Запуск AQUEL Credit в Словакии</li>
-                <div class="divider-main divider-main--card divider-main--about"></div>
                 <li class="brand-aquel__year">2013 год</li>
                 <li>Основание AQUEL Африка</li>
-                <div class="divider-main divider-main--card divider-main--about"></div>
                 <li class="brand-aquel__year">2015 год</li>
                 <li>Открыто 74 региональных офиса</li>
               </ul>
@@ -198,12 +185,10 @@
               <div class="divider-main divider-main--card"></div>
               <p class="brand-aquel__content">Компания AQUEL Bohemia разработала компактный фильтр-модуль для очистки сильнозагразненной воды в Африке, мощностью от 230 до 800 литров питьевой воды в час. Устройство работает с использованием солнечных панелей и технологии фильтрации, которая не требует внешнего электрического источника.</p>
               <p class="brand-aquel__content">В ноябре AQUEL Bohemia завершила пилотный проект такого модуля и в конце января 2013 года провела первую установку в одной из деревень, в пятнадцати километрах от г. Бамако, столицы Мали. Общая стоимость пилоного проекта, включая исследования и тестирования, составила более двух миллионов крон, и компания реализовала это за счет собственных средств. Планы компании в течениии блжайших трех лет установить эти модули в сотнях других деревень в Западноафриканской республики.</p>
-              <p class="brand-aquel__sub-title">Завершение пилотного проекта</p>
-              <div class="divider-main divider-main--card"></div>
+              <p class="brand-aquel__sub-title brand-aquel__sub-title--bg">Завершение пилотного проекта</p>
               <img class="pull-right" src="img/africa/aquel-solar.jpg" width="600" height="350" alt="Модуль AQUEL Solar для Африки">
-              <p class="brand-aquel__content">Проблема критической нехватки питьевой воды, от чего давно страдают люди в беднейшей Африканской стране, и мы, как производители и дистрибьюторы систем очистки воды, ни в коем случае не могли остаться равнодушными. Уже в 2010 и 2011 годах, мы в различных регионах Африки испытывали портативные системы фильтрации, которые производят безопасную питьевую воду из любых бактериологически загрязненных источников. Таким образом, по приглашению <b>Правительства Мали</b>, разработали компактные системы, которые очищают непригодную для питья воду из собственных скважин и резервуаров. Вода под давлением закачивается через систему фильтрации в специальные контейнеры, погруженные в землю, с выходом для получения питьевой воды. Это будет доступно для любого жителя деревни, где будет установлен такой модуль, и они всегда будут обеспечены чистой питьевой водой.</p>
-              <p class="brand-aquel__sub-title">Как это работает?</p>
-              <div class="divider-main divider-main--card"></div>
+              <p class="brand-aquel__content">Проблема критической нехватки питьевой воды, от чего давно страдают люди в беднейшей Африканской стране, и мы, как производители и дистрибьюторы систем очистки воды, ни в коем случае не могли остаться равнодушными. Уже в 2010 и 2011 годах, мы в различных регионах Африки испытывали портативные системы фильтрации, которые производят безопасную питьевую воду из любых бактериологически загрязненных источников. Таким образом, по приглашению <b>Правительства Мали</b>, мы разработали компактные системы, которые очищают непригодную для питья воду из собственных скважин и резервуаров. Вода под давлением закачивается через систему фильтрации в специальные контейнеры, погруженные в землю, с выходом для получения питьевой воды. Это будет доступно для любого жителя деревни, где будет установлен такой модуль, и они всегда будут обеспечены чистой питьевой водой.</p>
+              <p class="brand-aquel__sub-title brand-aquel__sub-title--bg">Как это работает?</p>
               <p class="brand-aquel__content">Система фильтрации AQUEL черпает воду из колодцев, рек, ручьев или различных скважин и пропускает ее через фильтры, откуда она поступает в огромные накопительные резервуары. Из воды полностью удаляется бактериологическое загрязнение, а эффективность очистки достигает 99,4%. Затем, благодаря нашей минерализации, в воду добавляется кальций и магний. Система погружена в землю на глубину до 1,5 метра и термически изолирована, тем самым, гарантирую, что температура выходной воды составляет около 20 градусов по Цельсию. Эта питьевая вода под давлением подается на специальные краны.</p>
               <p class="brand-aquel__content clearfix">В планах компании устанавливать такие модули по 30 и более штук ежемесячно для обеспечения чистой питьевой водой более 1000 деревень. Если этот проект окажется успешен, мы будем рекомендовать такой подход к решению проблемы нехватки чистой питьевой воды и в другие страны, нуждающиеся в питьевой воде.</p>
             </div>
