--- a/contract-offer.html
+++ b/contract-offer.html
@@ -104,32 +104,15 @@
 
       <section class="main">
 
-        <div class="introduction introduction--about-us">
+        <div class="introduction introduction--contract-offer">
           <h1 class="introduction__title animation-fadeIn">Договор оферта</h1>
-          <span class="introduction__aquel-title animation-fadeIn">
-          <svg version="1.1" width="130" height="130" x="0px" y="0px" viewBox="0 0 469 469" xml:space="preserve">
-              <g>
-                <path d="M303,33.5H15c-8.284,0-15,6.716-15,15v372c0,8.284,6.716,15,15,15h288c8.284,0,15-6.716,15-15v-372
-                C318,40.216,311.284,33.5,303,33.5z M288,405.5H30v-342h258V405.5z"/>
-                <path d="M67,146.5h184c5.523,0,10-4.478,10-10s-4.477-10-10-10H67c-5.523,0-10,4.478-10,10S61.477,146.5,67,146.5z"/>
-                <path d="M67,194.5h184c5.523,0,10-4.478,10-10s-4.477-10-10-10H67c-5.523,0-10,4.478-10,10S61.477,194.5,67,194.5z"/>
-                <path d="M67,242.5h184c5.523,0,10-4.478,10-10s-4.477-10-10-10H67c-5.523,0-10,4.478-10,10S61.477,242.5,67,242.5z"/>
-                <path d="M251,346.5H151c-5.523,0-10,4.478-10,10s4.477,10,10,10h100c5.523,0,10-4.478,10-10S256.523,346.5,251,346.5z"/>
-                <path d="M438,98.782V48.5c0-8.284-6.716-15-15-15h-56c-8.284,0-15,6.716-15,15v324c0,20.267,14.099,37.293,33,41.813v6.187
-                c0,5.522,4.477,10,10,10s10-4.478,10-10v-6.187c18.901-4.521,33-21.547,33-41.813V120.868c6.635,4.532,11,12.153,11,20.776V232.5
-                c0,5.522,4.477,10,10,10s10-4.478,10-10v-90.855C469,121.692,455.983,104.732,438,98.782z M408,63.5v33h-26v-33H408z M408,298.5
-                h-26v-182h26V298.5z M395,385.5L395,385.5c-7.169,0-13-5.832-13-13v-54h26v54C408,379.668,402.168,385.5,395,385.5z"/>
-              </g>
-            </svg>
-          </span>
         </div>
 
         <div class="contract-offer">
           <div class="container-article">
 
             <div class="contract-offer__card">
-              <h2 class="contract-offer__title">Договор-оферта интернет-магазина:</h2>
-              <div class="divider-main divider-main--card"></div>
+              <h2 class="contract-offer__title"><i class="fa fa-handshake-o fa-lg" aria-hidden="true"></i>Договор-оферта интернет-магазина:</h2>
 
               <p class="contract-offer__content">ООО "Айнова", в лице интернет-магазина https://aquel-shop.ru (далее ПРОДАВЕЦ), публикует настоящий договор, являющийся публичным договором-офертой в адрес как физических, так и юридических лиц (далее ПОКУПАТЕЛЬ) о нижеследующем:</p>
 
@@ -147,14 +130,14 @@
                 <li>2.3. Оформление ЗАКАЗА ТОВАРА и расчета осуществляется путем заказа ПОКУПАТЕЛЕМ в интернет-магазине https://aquel-shop.ru.</li>
               </ul>
 
-              <h3 class="contract-offer__sub-title">3. Характеристики ТОВАРА.</h3>
+              <h3 class="contract-offer__sub-title">3. Характеристики товара.</h3>
               <div class="divider-main divider-main--card"></div>
               <ul class="contract-offer__list">
                 <li>3.1. В связи с разными техническими характеристиками мониторов цвет ТОВАРА может отличаться от представленного на сайте.</li>
                 <li>3.2. Характеристики и внешний вид ТОВАРА могут отличаться от описанных на сайте.</li>
               </ul>
 
-              <h3 class="contract-offer__sub-title">4. Цена ТОВАРА.</h3>
+              <h3 class="contract-offer__sub-title">4. Цена товара.</h3>
               <div class="divider-main divider-main--card"></div>
               <ul class="contract-offer__list">
                 <li>4.1. Цены в интернет-магазине указаны в валюте страны покупателя за единицу ТОВАРА.</li>
@@ -162,14 +145,14 @@
                 <li>4.3. Общая сумма ЗАКАЗА указывается в строке «Итого» в платежной форме.</li>
               </ul>
 
-              <h3 class="contract-offer__sub-title">5. Оплата ТОВАРА.</h3>
+              <h3 class="contract-offer__sub-title">5. Оплата товара.</h3>
               <div class="divider-main divider-main--card"></div>
               <ul class="contract-offer__list">
                 <li>5.1. При безналичной форме оплаты обязанность ПОКУПАТЕЛЯ по уплате цены ТОВАРА считается исполненной с момента зачисления соответствующих денежных средств в размере 100% (ста процентов) предоплаты на расчетный счет ПРОДАВЦА по реквизитам, указанным в п. 13 (Реквизиты магазина) настоящего ДОГОВОРА.</li>
                 <li>5.2. ТОВАРЫ поставляются ПОКУПАТЕЛЮ по ценам, наименованию, в количестве, соответствующем счету, оплаченному ПОКУПАТЕЛЕМ.</li>
               </ul>
 
-              <h3 class="contract-offer__sub-title">6. Доставка ТОВАРА.</h3>
+              <h3 class="contract-offer__sub-title">6. Доставка товара.</h3>
               <div class="divider-main divider-main--card"></div>
               <ul class="contract-offer__list">
                 <li>6.1. Доставка ТОВАРА ПОКУПАТЕЛЮ осуществляется адресу и в сроки, согласованные ПОКУПАТЕЛЕМ и менеджером ПРОДАВЦА при оформлении ЗАКАЗА, либо ПОКУПАТЕЛЬ самостоятельно забирает товар со склада ПРОДАВЦА по адресу, указанному в п. 13 (Реквизиты магазина) настоящего ДОГОВОРА.</li>
