--- a/acquired.html
+++ b/acquired.html
@@ -11,7 +11,7 @@
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <title>Важная информация для покупателей</title>
+    <title>Важная информация для покупателей фильтров для воды AQUEL</title>
   </head>
 
   <body>
@@ -106,41 +106,25 @@
 
         <div class="introduction introduction--acquired">
           <h1 class="introduction__title animation-fadeIn">Информация для покупателей</h1>
-          <span class="introduction__aquel-title animation-fadeIn">
-            <svg version="1.1" width="100" height="100" x="0px" y="0px" viewBox="0 0 191.812 191.812" xml:space="preserve">
-              <g>
-                <path d="M95.906,121.003c6.903,0,12.5-5.597,12.5-12.5V51.511c0-6.904-5.597-12.5-12.5-12.5
-                s-12.5,5.596-12.5,12.5v56.993C83.406,115.407,89.003,121.003,95.906,121.003z"/>
-                <path  d="M95.909,127.807c-3.29,0-6.521,1.33-8.841,3.66c-2.329,2.32-3.659,5.54-3.659,8.83
-                s1.33,6.52,3.659,8.84c2.32,2.33,5.551,3.66,8.841,3.66s6.51-1.33,8.84-3.66c2.319-2.32,3.66-5.55,3.66-8.84s-1.341-6.51-3.66-8.83
-                C102.419,129.137,99.199,127.807,95.909,127.807z"/>
-                <path d="M95.906,0C43.024,0,0,43.023,0,95.906s43.023,95.906,95.906,95.906s95.905-43.023,95.905-95.906
-                S148.789,0,95.906,0z M95.906,176.812C51.294,176.812,15,140.518,15,95.906S51.294,15,95.906,15
-                c44.611,0,80.905,36.294,80.905,80.906S140.518,176.812,95.906,176.812z"/>
-              </g>
-            </svg>
-          </span>
         </div>
 
         <div class="acquired">
           <div class="container-article">
 
+            <h2 class="acquired__title">Поздравляем с покупкой!</h2>
             <div class="acquired__card">
-              <h2 class="acquired__title">Поздравляем с покупкой!</h2>
-              <div class="divider-main divider-main--card"></div>
               <p class="acquired__content">Предлагаем Вам познакомиться с основателем и владельцем компании <b>AQUEL Bohemia</b> Петром Бенешом, который в своем приветственном видео расскажет, почему так важно вовремя осуществлять сервисное обслуживание с помощью квалифицированных техников, с использованием оригинальных запчастей и картриджей.</p>
               <p class="acquired__content">Если какие-то вопросы по поводу сервисного обслуживания для Вас останутся не до конца понятны, пожалуйста, <a href="#showchat"">напишите</a> нам прямо сейчас, мы с удовольствием ответим.</p>
             </div>
 
             <div class="acquired__card acquired__card--video">
-              <video class="acquired__video" preload="metadata" controls>
+              <video class="acquired__video" preload="metadata" poster="video/Originalnui-servis-poster.jpg" controls>
                 <source src="video/Originalnui-servis-ot-Aquel-Ru.mp4" type="video/mp4">
               </video>
             </div>
 
+            <h2 class="acquired__title"><b>Важно: поддельный сервис!</b></h2>
             <div class="acquired__card">
-              <h2 class="acquired__title"><b>Важно: поддельный сервис!</b></h2>
-              <div class="divider-main divider-main--card"></div>
               <p class="acquired__content">Уважаемые <b>владельцы фильтров AQUEL</b>, обращаем Ваше внимание на <b>беспрецедентный случай мошенничества</b> со стороны бывших менеджеров российского подразделения AQUEL, который привел к массовому ухудшению качества работы фильтрующего оборудования.</p>
               <p class="acquired__content">Официальное письмо Петра Бенеша:</p>
               <p class="acquired__content">"В ходе внутреннего аудита компании ООО "AQUEL Plus" ИНН 3904606979 мной были обнаружены факты ненадлежащего исполнения управленческих функций со стороны некоторых наших бывших сотрудников в рамках гарантии на фильтрационные устройства AQUEL, сервисных замен, порядка выполнения ремонта и решения претензий."</p>
@@ -158,14 +142,11 @@
                 <li>БИК 044 030 706</li>
                 <li>Горячая линия: 8-800-200-3945</li>
               </ul>
-
-
             </div>
 
+            <h2 class="acquired__title">Обращение к владельцам фильтров</h2>
             <div class="acquired__card acquired__card--video">
-              <h2 class="acquired__title">Обращение к владельцам фильтров</h2>
-              <div class="divider-main divider-main--card"></div>
-              <video class="acquired__video" preload="metadata" controls>
+              <video class="acquired__video" preload="metadata" poster="video/video-dlay-klientov-poster.jpg" controls>
                 <source src="video/Video-dlya-klientov-osteregaites-mohennikov.mp4" type="video/mp4">
               </video>
             </div>
