--- a/certificate-of-quality.html
+++ b/certificate-of-quality.html
@@ -10,8 +10,9 @@
     <link rel="shortcut icon" type="image/png" href="img/favicon-32x32.png">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/jquery.fancybox.min.css">
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <title>Сертификаты качества продукции AQUEL</title>
+    <title>Сертификаты качества фильтров для воды AQUEL</title>
   </head>
 
   <body>
@@ -104,19 +105,9 @@
 
       <section class="main">
 
-        <div class="introduction introduction--privacy-police">
+        <div class="introduction introduction--certificate">
           <h1 class="introduction__title animation-fadeIn">Сертификаты качества</h1>
-          <p class="introduction__content introduction__content--payment-and-shipping animation-fadeIn">Мы уверены в наших фильтрах</p>
-          <span class="introduction__aquel-title animation-fadeIn">
-            <svg version="1.1" width="100" height="100" viewBox="0 0 489.6 489.6">
-              <g>
-                <g>
-                  <path d="m404.35,297.5c27.1-22.3 43.6-55.5 43.6-91.3 0-30.9-11.3-58.9-30.2-79.7v-116.1c0-6.3-4.2-10.4-10.4-10.4h-363.6c-6.3,0-10.4,4.2-10.4,10.4v468.8c0,6.3 4.2,10.4 10.4,10.4h363.5c5.2,0 10.4-4.2 10.4-10.4v-58.6l38.6-13.3-51.9-109.8zm23.8-91.3c-0.1,38.6-21.9,73-56.3,88.6-12.5,5.2-26,8.3-40.6,8.3-53.1,0-96.9-43.8-96.9-96.9s43.8-96.9 96.9-96.9 95.8,42.7 96.9,96.9zm-136.3,110.1l-21.1,93-40.6-14.5 42.2-87.3c6.2,3.5 12.7,6.5 19.5,8.8zm105,152.5h-342.7v-448h342.7v87.6c-18.6-12.6-41.1-19.9-65.6-19.9-27.2,0-52.1,9.1-71.9,24.4v-0.5h-138.6v20.8h118c-15.8,20.1-25.3,45.5-25.3,72.9 0,9.7 1.2,19.1 3.4,28.1h-96.1v20.8h103.4c7.2,15.6 17.7,29.2 30.7,40.2l-28.8,60.9h-105.3v20.8h95.5l-14.3,30.2 84.4,29.2 26.3-115c6,0.9 12.2,1.4 18.5,1.4 4.8,0 9.7-0.3 14.5-0.8l26.2,114.3 25-8.6v41.2zm-9.4-59.4l-20.7-91.4c4.3-1.2 17.6-7 20.2-8.5l41.1,85.3-40.6,14.6z"/>
-                  <path d="m306.15,170.9l-54.2,8.3 39.6,38.5-9.4,54.2 49-24 47.9,25-9.3-54.1 38.5-39.6-54.2-8.3-23.9-49-24,49zm35.4,19.8l22.9,3.1-16.7,16.7 4.3,22.8-20.8-10.4-20.8,11.5 4.2-24-16.8-16.6 22.9-3.1 10.4-20.8 10.4,20.8z"/>
-                </g>
-              </g>
-            </svg>
-          </span>
+          <p class="introduction__content introduction__content--certificate animation-fadeIn">Мы уверены в наших фильтрах</p>
         </div>
 
         <div class="certificate">
@@ -124,41 +115,41 @@
 
             <div class="certificate-card">
               <h2 class="certificate__title">Заключение часть 1</h2>
-              <div class="divider-main divider-main--card"></div>
               <div class="certificate__img">
-                <img src="img/certificate/Ekspertnoe_zakljuchenie.jpg" alt="">
+                <a href="img/certificate/Ekspertnoe_zakljuchenie.jpg" data-fancybox="images"><img src="img/certificate/Ekspertnoe_zakljuchenie-small.jpg" alt="Экспертное заключение 1">
+                </a>
               </div>
             </div>
 
             <div class="certificate-card">
               <h2 class="certificate__title">Заключение часть 2</h2>
-              <div class="divider-main divider-main--card"></div>
               <div class="certificate__img">
-                <img src="img/certificate/Ekspertnoe_zakljuchenie-2.jpg" alt="">
+                <a href="img/certificate/Ekspertnoe_zakljuchenie-2.jpg" data-fancybox="images"><img src="img/certificate/Ekspertnoe_zakljuchenie-2-small.jpg" alt="Экспертное заключение 2">
+                </a>
               </div>
             </div>
 
             <div class="certificate-card">
-              <h2 class="certificate__title">Приложение к заключению часть 1</h2>
-              <div class="divider-main divider-main--card"></div>
+              <h2 class="certificate__title">Приложение часть 1</h2>
               <div class="certificate__img">
-                <img src="img/certificate/Prilozhenie_k_ehkspertnomu_zakljucheniju.jpg" alt="">
+                <a href="img/certificate/Prilozhenie_k_ehkspertnomu_zakljucheniju.jpg" data-fancybox="images"><img src="img/certificate/Prilozhenie_k_ehkspertnomu_zakljucheniju-small.jpg" alt="Приложение к экспертному заключению 1">
+                </a>
               </div>
             </div>
 
             <div class="certificate-card">
-              <h2 class="certificate__title">Приложение к заключению часть 1</h2>
-              <div class="divider-main divider-main--card"></div>
+              <h2 class="certificate__title">Приложение часть 2</h2>
               <div class="certificate__img">
-                <img src="img/certificate/Prilozhenie_k_ehkspertnomu_zakljucheniju_2.jpg" alt="">
+                <a href="img/certificate/Prilozhenie_k_ehkspertnomu_zakljucheniju_2.jpg" data-fancybox="images"><img src="img/certificate/Prilozhenie_k_ehkspertnomu_zakljucheniju_2-small.jpg" alt="Приложение к экспертному заключению 2">
+                </a>
               </div>
             </div>
 
-            <div class="certificate-card">
-              <h2 class="certificate__title">Декларация о соответствии</h2>
-              <div class="divider-main divider-main--card"></div>
+            <div class="certificate-card certificate-card--last">
+              <h2 class="certificate__title">Декларация</h2>
               <div class="certificate__img">
-                <img src="img/certificate/Declaration of conformity.jpg" alt="">
+                <a href="img/certificate/Declaration of conformity.jpg" data-fancybox="images"><img src="img/certificate/Declaration of conformity-small.jpg" alt="Декларация о соответствии">
+                </a>
               </div>
             </div>
 
@@ -256,6 +247,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
+  <script type="text/javascript" src="js/jquery.fancybox.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 
   </body>
