--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           <nav class="navbar navbar-default">
             <div class="container-fluid">
               <div class="navbar-header">
+                <a href="#" type="button" class="btn--call-back-nav"><i class="fa fa-phone-square fa-lg" aria-hidden="true"></i>ОБРАТНЫЙ ЗВОНОК</a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                   <span class="sr-only">Toggle navigation</span>
                   <span class="icon-bar"></span>
