Link rel=canonical index page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="google-site-verification" content="tx2Hk9HW0-WQgBvTM5-1X15sdsmEJjr94Yowl_L8RfA" />
 
     <meta name="description" content="Интернет-магазин по продаже фильтров для воды AQUEL. Производство США, Чешская Республика, Италия. Запатентованные технологии, бесплатная доставка и монтаж. Официальный дилер.">
+    <link rel="canonical" href="https://aquel-shop.ru/"/>
     <link rel="shortcut icon" type="image/png" href="img/favicon-32x32.png">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="css/font-awesome.min.css">
